--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header img {
 }
 
 nav{
+    display: flex;
     height: 100%;
 }
 
@@ -59,10 +60,55 @@ nav button:hover{
     margin: 0;
 }
 
+.user {
+    display: none;
+    position: relative;
+    cursor: pointer;
+    background-color: #000;
+    border: 1px solid #FF0000;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    margin-right: 20px;
+}
+
+.menu {
+    display: none;
+    box-shadow: 0px 10px 15px #00000057;
+    z-index: 2;
+    position: absolute;
+    background: #fff;
+    right: 10px;
+    bottom: -110px;
+    width: 150px;
+    border-radius: 5px;
+}
+
+.menu div {
+    font-family: 'Dosis', sans-serif;
+    font-weight: 500;
+    padding: 15px;
+    transition: ease 150ms;
+}
+
+.menu .profil:hover {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    background-color: #000;
+    color: #FFF;
+}
+
+.menu .disconnect:hover {
+    color: #FFF;
+    background-color: #FF0000;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
 /* MAIN */
 
 h2, h3 {
-    margin: 15px 0 0 0;
+    margin: 15px 0 0;
     font-weight: 600;
     font-family: 'Karla', serif;
 }
@@ -81,6 +127,74 @@ p{
     font-family: 'Karla', sans-serif;
     font-weight: 400;
 }
+
+/* Connection overlay */
+
+.connection-overlay {
+    background-color: #000000BF;
+    position: fixed;
+    z-index: 5;
+    height: 100%;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.connection-overlay .box{
+    background-color: #FFF;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 50px;
+    border-radius: 5px;
+}
+
+.box h3 {
+    margin: 0;
+    text-align: center;
+}
+
+.box label {
+    font-family: 'Dosis', serif;
+    font-weight: 500;
+    margin-bottom: 2px;
+}
+
+.box input {
+    font-family: 'Karla', sans-serif;
+    width: 330px;
+    padding: 8px 10px;
+    border-radius: 5px;
+    border: 2px solid #0000003d;
+}
+
+.box div {
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto;
+}
+
+.box button {
+    border: 0;
+    background-color: #B8944F;
+    color: #FFF;
+    text-transform: uppercase;
+    height: 50px;
+    width: 100%;
+    font-family: 'Dosis', serif;
+    font-weight: 500;
+    border-radius: 5px;
+    transition: ease 150ms;
+}
+
+.box button:hover{
+    background-color: #000;
+}
+
+/* Search inputs */
 
 .search-inputs {
     background-color: #B8944F;
@@ -138,6 +252,10 @@ p{
 
 .search-inputs button:hover {
     opacity: 70%;
+}
+
+.destination input{
+    width: 150px;
 }
 
 .content {
@@ -210,10 +328,14 @@ p{
     opacity: 100%;
 }
 
+iframe {
+    margin-top: 150px;
+}
+
 /* Footer (bottom page) */
 
 footer{
-    margin-top: 200px;
+    /* margin-top: 200px; */
     background-color: #B8944F;
     height: 250px;
     display: flex;
