This changes nothing, don't look

--- a/style.css
+++ b/style.css
@@ -60,10 +60,6 @@ nav button:hover{
     margin: 0;
 }
 
-.connect {
-    display: none;
-}
-
 .user {
     display: inline;
     position: relative;
@@ -110,9 +106,13 @@ nav button:hover{
 
 .menu .disconnect:hover {
     color: #FFF;
-    background-color: #FF0000;
+    background-color: #B8944F;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+}
+
+.active {
+    display: inline;
 }
 
 
