--- a/public.css
+++ b/public.css
@@ -15,6 +15,9 @@
 
 .connection-overlay .box{
     background-color: #FFF;
+    transform: translateY(-150%);
+    transition-duration: 1s;
+    transition: 150ms ease;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -62,4 +65,8 @@
 
 .box button:hover{
     background-color: #000;
+}
+
+.active-connection {
+    transform: translateY(0%) !important;
 }
