--- a/style.css
+++ b/style.css
@@ -133,16 +133,25 @@ nav button:hover{
     text-align: center;
     margin: 25px;
 }
+.txt-index{
+    text-align: center;
+}
 .card{
     border: 2px solid #B8944F;
     width: 25rem;
 }
 .container{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding-left: 5px;
 }
+.partenaire-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* Footer (bottom page) */
 
 footer{
