--- a/css/public.css
+++ b/css/public.css
@@ -15,7 +15,7 @@
 
 .connection-overlay .box{
     background-color: #FFF;
-    transform: translateY(-150%);
+    /* transform: translateY(-150%); */
     transition-duration: 1s;
     transition: 150ms ease;
     display: flex;
