--- a/home.css
+++ b/home.css
@@ -151,3 +151,67 @@ p{
 iframe {
     margin-top: 150px;
 }
+
+.ticket-overlay {
+    background-color: #000000BF;
+    position: fixed;
+    z-index: 5;
+    height: 100%;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.ticket-overlay .box-parrain{
+    background-color: #FFF;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 50px;
+    border-radius: 5px;
+}
+
+
+.box-parrain h3 {
+    margin: 0;
+    text-align: center;
+}
+
+.box-parrain label {
+    font-family: 'Dosis', serif;
+    font-weight: 500;
+    margin-bottom: 2px;
+}
+
+.box-parrain input {
+    font-family: 'Karla', sans-serif;
+    width: 330px;
+    padding: 8px 10px;
+    border-radius: 5px;
+    border: 2px solid #0000003d;
+}
+
+.box-parrain div {
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto;
+}
+
+.box-parrain button {
+    border: 2px solid #B8944F;
+    background-color: #FFF;
+    color: #B8944F;
+    height: 50px;
+    width: 100%;
+    font-weight: 500;
+    border-radius: 5px;
+    transition: ease 150ms;
+}
+
+.box-parrain button:hover{
+    background-color: #B8944F;
+    color: #fff;
+}
