--- a/css/home.css
+++ b/css/home.css
@@ -7,6 +7,7 @@
 h2, h3 {
     margin: 15px 0 0;
     font-weight: 600;
+    font-family: 'Karla', serif;
 }
 
 h2 {
@@ -24,79 +25,10 @@ p{
     font-weight: 400;
 }
 
-
-/* Search inputs */
-
-.search-inputs {
-    background-color: #B8944F;
-    display: flex;
-    align-items: center;
-    padding: 0 10px;
-    justify-content: space-between;
-    height: 20vh;
-    position: relative;
-}
-
-.search-inputs div {
-    display: flex;
-    flex-direction: column;
-    margin: auto 15px;
-}
-
-.search-inputs .time {
-    flex-direction: row;
-}
-
-.search-inputs .options {
-    flex-direction: row;
-}
-
-.search-inputs label {
-    user-select: none;
-    position: absolute;
-    top: 25px;
-    text-align: center;
-    font-family: 'Dosis', sans-serif;
-    color: #FFF;
-}
-
-.search-inputs input {
-    width: 50px;
-    height: 30px;
-}
-.search-inputs select {
-    height: 30px;
-}
-
-.search-inputs button {
-    font-family: 'Dosis', sans-serif;
-    font-weight: 600;
-    border: none;
-    color: #B8944F;
-    background-color: #FFF;
-    padding: 5px 10px;
-    width: 140px;
-    border-radius: 50px;
-    margin-right: 20px;
-    transition: ease 150ms;
-}
-
-.search-inputs button:hover {
-    opacity: 70%;
-}
-
-.destination input{
-    width: 150px;
-}
-
 .content {
     margin: 0 auto;
-    width: 80%;
+    width: 90%;
 }
-
-.card{
-    width: 15rem;
-}   
 
 .card-deck{
     white-space:nowrap;
@@ -123,15 +55,24 @@ p{
 
 .best div {
     position: relative;
-    height: 210px;
-    width: 250px;
-    background-color: #BFBFBF;
+    height: 15rem;
+    width: 19rem;
+    min-width: 19rem;
+    background: none;
+}
+
+.best div:not(.ov){
+    margin-right: 10px;
+}
+
+.best div:last-child{
+    margin: 0;
 }
 
 .best img {
     position: relative;
-    height: 210px;
-    width: 250px;
+    height: 100%;
+    width: 100%;
     object-fit: cover;
 }
 
@@ -152,66 +93,32 @@ iframe {
     margin-top: 150px;
 }
 
-.ticket-overlay {
-    background-color: #000000BF;
-    position: fixed;
-    z-index: 5;
-    height: 100%;
-    width: 100%;
-    top: 0px;
-    left: 0px;
-    display: none;
-    justify-content: center;
-    align-items: center;
+@media screen and (max-width: 65em) {
+    .best div {
+        min-width: 1rem;
+        width: 15rem;
+        height: 12rem;
+    }
+    .card {
+        margin: 10px auto;
+    }
+    .card-deck{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+    }
+    .best span{
+        right: 24%;
+    }
 }
 
-.ticket-overlay .box-parrain{
-    background-color: #FFF;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 50px;
-    border-radius: 5px;
-}
-
-
-.box-parrain h3 {
-    margin: 0;
-    text-align: center;
-}
-
-.box-parrain label {
-    font-family: 'Dosis', serif;
-    font-weight: 500;
-    margin-bottom: 2px;
-}
-
-.box-parrain input {
-    font-family: 'Karla', sans-serif;
-    width: 330px;
-    padding: 8px 10px;
-    border-radius: 5px;
-    border: 2px solid #0000003d;
-}
-
-.box-parrain div {
-    display: flex;
-    flex-direction: column;
-    margin: 20px auto;
-}
-
-.box-parrain button {
-    border: 2px solid #B8944F;
-    background-color: #FFF;
-    color: #B8944F;
-    height: 50px;
-    width: 100%;
-    font-weight: 500;
-    border-radius: 5px;
-    transition: ease 150ms;
-}
-
-.box-parrain button:hover{
-    background-color: #B8944F;
-    color: #fff;
+@media screen and (max-width: 35em) {
+    .card-deck{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .card{
+        margin-bottom: 10px;
+    }
 }
