--- a/css/public.css
+++ b/css/public.css
@@ -1,37 +1,30 @@
 /* Connection overlay */
 
-.overlay-c {
-    display: none;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    background-color: #000000BF;
-}
-
 .connection-overlay {
+    background-color: #000000BF;
     position: fixed;
     z-index: 5;
-    top: 30%;
-    left: 20%;
-    display: flex;
+    height: 100%;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    display: none;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff;
-    transform: translateY(-300%);
-    transition: 150ms ease;
-    border-radius: 5px;
 }
 
 .connection-overlay .box{
-    z-index: 6;
+    background-color: #FFF;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 50px;
     border-radius: 5px;
+}
+
+.box{
+    transform: translateY(-140%);
+    transition: 150ms ease;
 }
 
 .box h3 {
