--- a/css/public.css
+++ b/css/public.css
@@ -1,32 +1,25 @@
 /* Connection overlay */
 
-.overlay-c {
-    display: none;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    background-color: #000000BF;
-}
 
 .connection-overlay {
     position: fixed;
     z-index: 5;
-    top: 30%;
-    left: 20%;
-    display: flex;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff;
-    transform: translateY(-300%);
-    transition: 150ms ease;
+    background-color: #000000BF;
     border-radius: 5px;
 }
 
 .connection-overlay .box{
     z-index: 6;
+    background-color: #fff;
+    transform: translateY(-300%);
+    transition: 150ms ease;
     display: flex;
     flex-direction: column;
     justify-content: center;
